<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/teksSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pengaturan"
        android:textColor="@color/mainColor"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/teksGantiPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gantiPass"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/teksSetting"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/teksPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currentPass"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/teksGantiPass"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/inputPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teksPass"
        android:hint="@string/currentPass"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/teksNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newPass"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/inputPass"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/inputNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teksNewPass"
        android:hint="@string/newPass"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnSimpan"
        android:text="@string/simpan"
        android:backgroundTint="@color/mainColor"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/inputNewPass"
        android:minHeight="48dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnKembali"
        android:text="@string/kembali"
        android:backgroundTint="@color/redDrop"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/btnSimpan"
        android:minHeight="48dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border">

        <ImageView
            android:id="@+id/profil"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="fitCenter"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/profil"/>

        <TextView
            android:id="@+id/teksAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profil"
            android:text="About this App..."
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/mainColor"/>

        <TextView
            android:id="@+id/keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teksAbout"
            android:layout_toEndOf="@+id/profil"
            android:text="@string/ketProfil"
            android:layout_marginTop="10dp"
            android:textColor="@color/mainColor"
            android:textSize="15sp"/>

    </RelativeLayout>

</RelativeLayout>